# agentic-mof-workflow

./: .gitignore  pyproject.toml  run-agentic-test.sh  run-federated-agents.sh
envs/: environment-aurora.yml  environment-polaris.yml
input-files/zn-paddle-pillar/: 0_assemble-inputs.py
mofa/: difflinker_train.py  generator.py  model.py
mofa/agentic/: compute.py  config.py  parsl.py  parsl_config.py  run.py  steering.py  task.py
mofa/simulation/: lammps.py
mofa/utils/: difflinker_sample_and_analyze.py  lightning.py
